# substitue-doll

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: reviewer-correctness.md  reviewer-design.md
.claude/hooks/: review-reminder.sh
.claude/skills/review/: SKILL.md
.github/workflows/: ci.yml
substitue_doll/: __init__.py
substitue_doll/core/: __init__.py  extraction.py  record.py  repository.py
substitue_doll/extract/: __init__.py  rule.py
substitue_doll/refine/: __init__.py  stub.py
substitue_doll/store/: __init__.py  sqlite_repository.py
tests/: conftest.py  test_refine_stub.py  test_rule_extractor.py  test_sqlite_repository.py
