[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "substitue-doll"
version = "0.0.0"
description = "이별 마음 정리를 돕는 AI 에이전트 (RAG). 자세한 내용은 PLAN.md / CLAUDE.md 참조."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["substitue_doll*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
